# sendgrid-amqp-bridge

./: .rustfmt.toml  .travis.yml  Cargo.toml  Dockerfile  README.md  build.rs  config.yml
.github/: dependabot.yml
.github/workflows/: linux.yml
misc/: entrypoint.sh
src/: amqp.rs  build_info.rs  config.rs  log.rs  main.rs  payload.rs  sendgrid.rs
