[package]
name = "sendgrid-amqp-bridge"
version = "19.3.0"
authors = ["Otavio Salvador <otavio@ossystems.com.br>"]
license = "MIT"
edition = "2018"

[dependencies]
failure = "0.1"
git-version = "0.3"
lapin = { version = "0.32", features = ["futures"] }
num_cpus = "1"
sendgrid_api = { version = "0.10", package = "sendgrid" }
serde = { version = "1", features = ["std", "derive"] }
serde_json = "1"
serde_with = "1"
serde_yaml = "0.8"
slog = { version = "2", features = ["max_level_trace", "release_max_level_trace"] }
slog-async = "2"
slog-json = "2"
slog-term = "2"
structopt = "0.3"
tokio = { version = "0.2", features = ["macros"] }
