[package]
name = "sendgrid-amqp-bridge"
version = "19.3.0"
authors = ["Otavio Salvador <otavio@ossystems.com.br>"]
license = "MIT"
edition = "2018"

[dependencies]
anyhow = "1"
git-version = "0.3"
lapin = "1"
sendgrid_api = { version = "0.15", package = "sendgrid" }
serde = { version = "1", features = ["std", "derive"] }
serde_json = "1"
serde_with = "1"
serde_yaml = "0.8"
slog = { version = "2", features = ["max_level_trace", "release_max_level_trace"] }
slog-async = "2"
slog-json = "2"
slog-term = "2"
structopt = "0.3"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
